--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,16 @@
 version: '3.9'
 
 services:
+  web:
+    build: .
+    ports: 
+      - "10533:10533"
+      
   postgres:
     image: postgres
     ports:
-      - '5432:5432'
+      # - '5432:5432'
+      - '10533:10533'
     env_file:
       - .env
     volumes:
