--- a/package.json
+++ b/package.json
@@ -5,25 +5,34 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node dist/server.js", 
+    "start": "node dist/server.js",
     "build": "npx tsc",
+    "migrate": "db-migrate --env dev up && db-migrate up",
     "watch": "tsc-watch --onSuccess 'node ./dist/server.js'",
-    "test": "jasmine-ts"
-    
+    "test": "ENV=test db-migrate --env test up && jasmine-ts && db-migrate db:drop test",
+    "config": "node -r dotenv/config ./dist/database.js",
+    "final": "npm run config && npm run build && npm run watch"
   },
   "author": "Gabriel Ramirez",
   "license": "ISC",
   "dependencies": {
-    "@types/pg": "^7.14.7",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "db-migrate": "^0.11.12",
+    "db-migrate-pg": "^1.2.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "typescript": "^4.3.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.12",
     "@types/jasmine": "^3.6.3",
+    "@types/jsonwebtoken": "^8.5.2",
     "@types/node": "^15.12.4",
+    "@types/pg": "^8.6.0",
+    "dotenv": "^10.0.0",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
     "jasmine-ts": "^0.3.0",
