--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,29 @@
 version: '3.9'
 
-services:
-  web:
-    build: .
-    ports: 
-      - "10533:10533"
-      
+services:   
   postgres:
     image: postgres
     ports:
-      # - '5432:5432'
-      - '10533:10533'
+      - '5432:5432'
     env_file:
+    # environment: 
       - .env
+      # POSTGRES_HOST: localhost
+      # POSTGRES_PASSWORD: postgres
+      # POSTGRES_USER: postgres
+      # POSTGRES_DB: storefront_dev
     volumes:
-      - 'postgres:/var/lib/postgresql/data'
+      - './postgres:/var/lib/postgresql/data'
+
+  web:
+    build: .
+    image: sql-express-storefront
+    depends_on: 
+      - postgres
+    ports: 
+      - '3000:3000'
+    # env_file:
+    #   - .env
 
 volumes:
   postgres:
