--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "storefront_backend",
   "version": "0.1.0",
   "description": "Storefront using Express and Postgres",
-  "main": "server.js",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node dist/index.js",
     "build": "npx tsc",
     "migrate": "db-migrate --env dev up && db-migrate up",
-    "watch": "tsc-watch --onSuccess 'node ./dist/server.js'",
+    "watch": "tsc-watch --onSuccess 'node ./dist/index.js'",
+    "nodemon": "nodemon src/index.ts",
     "test": "ENV=test db-migrate --env test up && jasmine-ts && db-migrate db:drop test",
     "config": "node -r dotenv/config ./dist/database.js",
     "final": "npm run config && npm run build && npm run watch"
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "db-migrate": "^0.11.12",
     "db-migrate-pg": "^1.2.2",
     "express": "^4.17.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.11",
     "@types/express": "^4.17.12",
     "@types/jasmine": "^3.6.3",
     "@types/jsonwebtoken": "^8.5.2",
@@ -36,6 +38,7 @@
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
     "jasmine-ts": "^0.3.0",
+    "nodemon": "^2.0.11",
     "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9"
   },
