--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "node dist/index.js",
     "build": "npx tsc",
     "migrate": "db-migrate --env dev up && db-migrate up",
+    "migrate-down": "db-migrate --env dev down && db-migrate down",
     "watch": "tsc-watch --onSuccess 'node ./dist/index.js'",
     "nodemon": "nodemon src/index.ts",
     "test": "ENV=test db-migrate --env test up && jasmine-ts && db-migrate db:drop test",
     "config": "node -r dotenv/config ./dist/database.js",
-    "final": "npm run config && npm run build && npm run watch"
+    "final": "npm run build && npm run watch"
   },
   "author": "Gabriel Ramirez",
   "license": "ISC",
