--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "watch": "tsc-watch --onSuccess 'node ./dist/index.js'",
     "nodemon": "nodemon src/index.ts",
     "test": "ENV=test db-migrate --env test up && jasmine-ts && db-migrate db:drop test",
-    "config": "node -r dotenv/config ./dist/database.js",
-    "final": "npm run build && npm run watch"
+    "config": "node -r dotenv/config ./dist/database.js"
   },
   "author": "Gabriel Ramirez",
   "license": "ISC",
@@ -37,7 +36,7 @@
     "@types/pg": "^8.6.0",
     "dotenv": "^10.0.0",
     "jasmine": "^3.6.4",
-    "jasmine-spec-reporter": "^6.0.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "jasmine-ts": "^0.3.0",
     "nodemon": "^2.0.11",
     "ts-node": "^9.1.1",
