--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "watch": "tsc-watch --onSuccess 'node ./dist/index.js'",
     "nodemon": "nodemon src/index.ts",
     "config": "node -r dotenv/config ./dist/database.js",
-    "migrate": "ENV=dev db-migrate --env dev up && db-migrate up",
-    "create": "db-migrate db:create storefront_dev",
-    "delete": "db-migrate db:drop storefront_dev",
+    "migrate": "db-migrate --env dev up",
     "test": "ENV=test db-migrate --env test up && jasmine-ts && db-migrate db:drop test"
   },
   "author": "Gabriel Ramirez",
