--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
+    "supertest": "^6.1.6",
     "typescript": "^4.3.4"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/jsonwebtoken": "^8.5.2",
     "@types/node": "^15.12.4",
     "@types/pg": "^8.6.0",
+    "@types/supertest": "^2.0.11",
     "dotenv": "^10.0.0",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^7.0.0",
